# ripgrep

./: .bazelrc  .gitignore  BUILD.bazel  WORKSPACE  cargo-bazel-lock.json
crates/cli/: BUILD.bazel
crates/globset/: BUILD.bazel
crates/grep/: BUILD.bazel
crates/ignore/: BUILD.bazel
crates/matcher/: BUILD.bazel
crates/pcre2/: BUILD.bazel
crates/printer/: BUILD.bazel
crates/regex/: BUILD.bazel
crates/searcher/: BUILD.bazel
