load("@crate_index//:defs.bzl", "aliases", "all_crate_deps")
load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test", "rust_binary", "rust_doc_test")

rust_library(
    name = "grep",
    srcs = glob([
        "src/**/*.rs",
    ]),
    aliases = aliases(),
    deps = all_crate_deps(
        normal = True,
    ) + [
        "//crates/cli:grep-cli",
        "//crates/matcher:grep-matcher",
        "//crates/pcre2:grep-pcre2",
        "//crates/printer:grep-printer",
        "//crates/regex:grep-regex",
        "//crates/searcher:grep-searcher",
    ],
    proc_macro_deps = all_crate_deps(
        proc_macro = True,
    ),
    visibility = ["//visibility:public"],
)

rust_test(
    name = "test",
    crate = ":grep",
    aliases = aliases(
        normal_dev = True,
        proc_macro_dev = True,
    ),
    deps = all_crate_deps(
        normal_dev = True,
    ),
    proc_macro_deps = all_crate_deps(
        proc_macro_dev = True,
    ),
)

rust_doc_test(
    name = "doctests",
    crate = ":grep",
)

rust_binary(
    name = "examples",
    srcs = glob([
        "examples/**/*.rs",
    ]),
    deps = all_crate_deps(
        normal_dev = True
    ) + [
        ":grep",
    ],
    proc_macro_deps = all_crate_deps(
        proc_macro_dev = True
    ),
)

