load("@crate_index//:defs.bzl", "aliases", "all_crate_deps")
load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test", "rust_doc_test")

rust_library(
    name = "grep-printer",
    srcs = glob([
        "src/**/*.rs",
    ]),
    aliases = aliases(),
    deps = all_crate_deps(
        normal = True,
    ) + [
        "//crates/matcher:grep-matcher",
        "//crates/searcher:grep-searcher",
    ],
    proc_macro_deps = all_crate_deps(
        proc_macro = True,
    ),
    crate_features = [
        "serde1",
    ],
    visibility = ["//visibility:public"],
)

rust_test(
    name = "test",
    crate = ":grep-printer",
    aliases = aliases(
        normal_dev = True,
        proc_macro_dev = True,
    ),
    deps = all_crate_deps(
        normal_dev = True,
    ) + [
        "//crates/regex:grep-regex",
    ],
    proc_macro_deps = all_crate_deps(
        proc_macro_dev = True,
    ),
    crate_features = [
        "serde1",
    ],
)

rust_doc_test(
    name = "doctests",
    crate = ":grep-printer",
    deps = [
        "//crates/regex:grep-regex",
    ],
)
